--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookies-next": "^4.2.1",
     "next": "14.2.9",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
   },
